Curves. Unable to make segment #38786

Closed
opened 2014-02-23 22:10:50 +01:00 by Nicholas Bragg · 11 comments

System Information
Windows 7 Home premium 64-bit (graphics card not applicable)

Blender Version
Broken: (Blender 2.69.11)
Worked: (2.69)

Short description of error
When ready to connect two ends of any curve (Bezier or Nurbs) with the F key, an error message pops up (Cannot connect segments) and connection is unsuccessful.

Exact steps for others to reproduce the error

  1. Add curve
  2. extrude curve (E key)
  3. Connect the endpoints (F key)
    "Cannot make Segment"

Hope this helps :)

**System Information** Windows 7 Home premium 64-bit (graphics card not applicable) **Blender Version** Broken: (Blender 2.69.11) Worked: (2.69) **Short description of error** When ready to connect two ends of any curve (Bezier or Nurbs) with the F key, an error message pops up (Cannot connect segments) and connection is unsuccessful. **Exact steps for others to reproduce the error** 1. Add curve 2. extrude curve (E key) 3. Connect the endpoints (F key) "Cannot make Segment" Hope this helps :)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Mdnnickb

Added subscriber: @Mdnnickb
Author

CraftStreanLOGO.blend

Steps should be easily replicated, but just in case...

[CraftStreanLOGO.blend](https://archive.blender.org/developer/F78673/CraftStreanLOGO.blend) Steps should be easily replicated, but just in case...

Added subscriber: @ideasman42

Added subscriber: @ideasman42

In this case you want to make the curve cyclic (Curve -> Toggle Cyclic),

However I can see why you would expect F-Key action to perform this action.

Anyone object to supporting this case?

Note, this isnt a bug strictly speaking, but it is a usability issue.

In this case you want to make the curve cyclic (Curve -> Toggle Cyclic), However I can see why you would expect F-Key action to perform this action. Anyone object to supporting this case? Note, this isnt a bug strictly speaking, but it is a usability issue.

This issue was referenced by blender/blender-addons-contrib@103583c89b

This issue was referenced by blender/blender-addons-contrib@103583c89b5466402409afe6e55cfdc66dc31d3e

This issue was referenced by 103583c89b

This issue was referenced by 103583c89b5466402409afe6e55cfdc66dc31d3e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 103583c89b.

Closed by commit 103583c89b.

I stand corrected, this was a bug since there was already a check to do this, it just failed in some situations, committed fix.

I stand corrected, this was a bug since there was already a check to do this, it just failed in some situations, committed fix.
Author

Ah, ok thats a way around the F-Key in this case.

Just making sure people knew of the problem :)

Ah, ok thats a way around the F-Key in this case. Just making sure people knew of the problem :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38786
No description provided.