Fix T38786: Curve unable to make segment